# jpeg-encoder

./: .gitignore  CMakeLists.txt  README.md
docs/: artifact-analysis.md  dct-intuition.md  huffman-encoding.md  memory.md  perfomance.md  pipeline.md  quantization-and-quality.md
docs/diagrams/: jpeg-encoding-pipeline.puml
include/: ac_encoder.hpp  bitstream_writer.hpp  block_splitter.hpp  bmp_reader.hpp  color_converter.hpp  dc_encoder.hpp  dct.hpp  dct_test.hpp  debug_dump.hpp  encoder_pipeline.hpp  entropy_encoder.hpp  huffman_generator.hpp  huffman_tables.hpp  jpeg_writer.hpp  logger.hpp  metrics.hpp  padding.hpp  quantizer.hpp  visual_comparison.hpp  zigzag.hpp  zigzag_test.hpp
reports/: report1_q5.txt  report1_q50.txt  report1_q75.txt  report1_q90.txt  report2_q5.txt  report2_q50.txt  report2_q75.txt  report2_q90.txt  report3_q5.txt  report3_q50.txt  report3_q75.txt  report3_q90.txt  report4_q5.txt  report4_q50.txt  report4_q75.txt  report4_q90.txt  report5_q5.txt  report5_q50.txt  report5_q75.txt  report5_q90.txt  report6_q75.txt  report_q5.txt  report_q50.txt  report_q90.txt
src/: ac_encoder.cpp  bitstream_writer.cpp  block_splitter.cpp  bmp_reader.cpp  color_converter.cpp  dc_encoder.cpp  dct.cpp  dct_test.cpp  debug_dump.cpp  encoder_pipeline.cpp  entropy_encoder.cpp  huffman_generator.cpp  huffman_tables.cpp  jpeg_writer.cpp  logger.cpp  main.cpp  metrics.cpp  padding.cpp  quantizer.cpp  visual_comparison.cpp  zigzag.cpp  zigzag_test.cpp
